--- a/wp-content/themes/urwahl3000_kleem/style.css
+++ b/wp-content/themes/urwahl3000_kleem/style.css
@@ -207,7 +207,7 @@
 
 
 
-article.opinion .opinion_topics .opinion_topic_wrap {
+article.type-opinion .opinion_topics .opinion_topic_wrap {
 	float: left;
 	background-color: #63a14f;
 	margin: 0 2% 2% 0;
