--- a/wp-content/themes/urwahl3000_kleem/style.css
+++ b/wp-content/themes/urwahl3000_kleem/style.css
@@ -423,4 +423,5 @@ article.type-opinion .opinion_topic_wrap a{
 #main .ajax_more_posts{
 	text-align: center;
 	margin-bottom:4%;
+	margin-top:4%;
 }
